<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fr.utarwyn</groupId>
    <artifactId>EnderContainers</artifactId>
    <version>2.2.0</version>
    <packaging>jar</packaging>

    <name>EnderContainers</name>
    <description>A Bukkit plugin to create multiple enderchests in one simply</description>
    <url>https://github.com/utarwyn/EnderContainers</url>
    <inceptionYear>2015</inceptionYear>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Utarwyn Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/utarwyn/EnderContainers</url>
        </repository>
    </distributionManagement>

    <licenses>
        <license>
            <name>The BSD 3-Clause License</name>
            <url>http://opensource.org/licenses/BSD-3-Clause</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <bukkit.version>1.14.4-R0.1-SNAPSHOT</bukkit.version>
        <dbcp.version>2.1.1</dbcp.version>
        <citizensapi.version>2.0.25-SNAPSHOT</citizensapi.version>
        <worldguard.version>7.0.0-SNAPSHOT</worldguard.version>
        <worldguard.old.version>6.1.1-SNAPSHOT</worldguard.old.version>
        <factions.version>2.12.1</factions.version>
        <factions.legacy.version>1.6.9.5-U0.2.2</factions.legacy.version>
        <plotsquared.version>4.400</plotsquared.version>
        <bstats.version>1.5</bstats.version>
        <junit.version>4.12</junit.version>
        <mockito.version>2.28.2</mockito.version>
        <assertj.version>3.11.1</assertj.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <outputDirectory>target</outputDirectory>
    </properties>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>citizens-repo</id>
            <url>http://repo.citizensnpcs.co/</url>
        </repository>
        <repository>
            <id>worldguard-repo</id>
            <url>https://maven.sk89q.com/repo/</url>
        </repository>
        <repository>
            <id>plotsquared-repo</id>
            <url>https://ci.athion.net/job/PlotSquared-Releases/ws/mvn/</url>
        </repository>
        <repository>
            <id>factions-repo</id>
            <url>https://fractal.lindegaard.one:8187/artifactory/plugins-release/</url>
        </repository>
        <repository>
            <id>factions-legacy-repo</id>
            <url>https://ci.ender.zone/plugin/repository/everything/</url>
        </repository>
        <repository>
            <id>bstats-repo</id>
            <url>https://repo.codemc.org/repository/maven-public</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Bukkit API -->
        <dependency>
            <groupId>org.bukkit</groupId>
            <artifactId>bukkit</artifactId>
            <version>${bukkit.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- DBCP 2 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-dbcp2</artifactId>
            <version>${dbcp.version}</version>
        </dependency>

        <!-- Citizens -->
        <dependency>
            <groupId>net.citizensnpcs</groupId>
            <artifactId>citizensapi</artifactId>
            <version>${citizensapi.version}</version>
            <scope>provided</scope>
            <type>jar</type>
        </dependency>

        <!-- WorldGuard 6+ and 7+ -->
        <dependency>
            <groupId>com.sk89q</groupId>
            <artifactId>worldguard</artifactId>
            <version>${worldguard.old.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>com.sk89q.spigot</groupId>
                    <artifactId>bukkit-classloader-check</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.sk89q</groupId>
                    <artifactId>commandbook</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-legacy</artifactId>
            <version>${worldguard.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.bukkit</groupId>
                    <artifactId>bukkit</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.sk89q</groupId>
                    <artifactId>commandbook</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Factions -->
        <dependency>
            <groupId>com.massivecraft.massivecore</groupId>
            <artifactId>MassiveCore</artifactId>
            <version>${factions.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.massivecraft.factions</groupId>
            <artifactId>Factions</artifactId>
            <version>${factions.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.massivecraft</groupId>
            <artifactId>Factions</artifactId>
            <version>${factions.legacy.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- PlotSquared -->
        <dependency>
            <groupId>com.github.intellectualsites.plotsquared</groupId>
            <artifactId>PlotSquared-API</artifactId>
            <version>${plotsquared.version}</version>
            <scope>provided</scope>
            <type>jar</type>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Testing dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>${bstats.version}</version>
        </dependency>
    </dependencies>

    <build>
        <defaultGoal>clean install</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <minimizeJar>false</minimizeJar>
                            <relocations>
                                <relocation>
                                    <pattern>org.bstats</pattern>
                                    <shadedPattern>fr.utarwyn.endercontainers</shadedPattern>
                                </relocation>
                            </relocations>
                            <artifactSet>
                                <includes>
                                    <include>org.bstats:*</include>
                                    <include>org.apache.commons:commons-*</include>
                                    <include>commons-logging:*</include>
                                </includes>
                            </artifactSet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.3.1</version>
                <configuration>
                    <outputDirectory>${outputDirectory}</outputDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
